# ToDoList

./: Dockerfile  README.md  docker-compose.yaml  entrypoint.sh  pyproject.toml
.github/workflows/: build_and_deploy.yaml
deploy/: .env  docker-compose.yaml  nginx.conf
tests/: conftest.py  factories.py
tests/boards/: test_board_create_view.py  test_board_view.py
tests/goals/: test_goal_create_view.py
tests/сategory/: test_category_create_view.py  test_category_view.py
todolist/: settings.py  urls.py
todolist/bot/: models.py  serializers.py  urls.py  views.py
todolist/bot/managment/commands/: runbot.py
todolist/bot/migrations/: 0001_initial.py
todolist/bot/tg/: client.py
todolist/core/: fields.py  serializers.py  urls.py  views.py
todolist/core/migrations/: 0001_initial.py
todolist/goals/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
todolist/goals/migrations/: 0001_initial.py  0002_goal.py  0003_board_alter_goal_due_date_alter_goal_priority_and_more.py  0004_create_new_objects.py  0005_alter_goalcategory_board.py  0006_goalcomment_user.py
